--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="cooking_mode6">Cooking Mode</string>
     <string name="easy_mode1">Easy Mode</string>
     <string name="rate_the_recipe2">Rate the Recipe</string>
+    <string name="submit1">Submit</string>
 </resources>
